--- a/Style_DashBoard.css
+++ b/Style_DashBoard.css
@@ -50,6 +50,10 @@ header a:hover {
 .ri-user-3-line {
   font-size: 23px;
 }
+.GrayTxt {
+  color: #909091;
+  font-size: 16px;
+}
 /* Header Section End */
 
 /* Nav  Start*/
@@ -81,6 +85,10 @@ ul a {
 
 li:hover a,
 li:hover span {
+  color: #4f46e5;
+}
+#Selected_Page a,
+#Selected_Page span {
   color: #4f46e5;
 }
 /* nav End */
@@ -183,7 +191,7 @@ main {
   color: #a855f7;
   font-size: 25px;
 }
-Total_user_percent {
+#Total_user_percent {
   color: #a855f7;
 }
 /*Dashboard Cards Ends*/
@@ -222,7 +230,6 @@ Total_user_percent {
 }
 .RevenueStatsContainer_header_links:hover {
   background-color: #4f46e5;
-  color: #ff0000;
   transition: background-color 0.3s ease;
 }
 .RevenueStatsContainer_header_links a {
