--- a/Style_AddEvent.css
+++ b/Style_AddEvent.css
@@ -5,9 +5,9 @@
 }
 
 body {
-  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
-    "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: ui-sans-serif, system-ui, "Segoe UI", "Helvetica Neue", Arial,
+    "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol", "Noto Color Emoji";
 }
 /*Header Section*/
 .logo {
@@ -123,7 +123,7 @@ main {
 }
 #AddEventFormContainer {
   max-width: 800px;
-  margin: 20px auto;
+  margin: 10px auto;
   padding: 20px;
   border: 1px solid #ddd;
   border-radius: 10px;
@@ -194,4 +194,12 @@ main {
 
 #submitBtn:hover {
   background-color: #3730a3;
+}
+
+#errorMessage {
+  color: #ff0000;
+  font-size: 16px;
+  margin-top: 10px;
+  text-align: center;
+  font-weight: bold;
 }
