--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@
   margin: 0;
   padding: 0;
 }
+html {
+  scroll-behavior: smooth;
+}
 .logo {
   font-size: 1.5em;
   font-family: "Brush Script MT", cursive;
