--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ header {
   width: 100%;
   top: 0;
   z-index: 1000;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 nav li {
   list-style-type: none;
@@ -56,6 +57,9 @@ nav {
 }
 .Blacktxt {
   color: black;
+}
+.ActivePage {
+  color: #4f46e5;
 }
 #sgnUp {
   background-color: #4f46e5;
@@ -146,7 +150,7 @@ nav {
   background-color: rgba(208, 207, 216, 0.9);
   transition: background-color 0.1s ease;
 }
-
+/* Search Bar Starts */
 #SrcBar {
   display: flex;
   justify-content: space-between;
@@ -204,6 +208,12 @@ nav {
   background-color: rgba(79, 70, 229, 0.9);
   transition: background-color 0.1s ease;
 }
+#errorMessage {
+  color: red;
+}
+/* Search Bar Ends */
+
+/* Category Section Starts */
 #Category-Section {
   display: flex;
   justify-content: center;
@@ -226,6 +236,9 @@ nav {
   color: #5a5959;
   text-align: center;
   margin-bottom: 20px;
+  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 .Category-Container {
   display: flex;
@@ -260,6 +273,7 @@ nav {
   color: rgb(54, 54, 54);
   font-family: sans-serif;
 }
+/* Category Section Ends */
 .Icon-Background {
   border-radius: 50%;
   height: 64px;
