MVC Architecture Followed

--- a/Asset/CSS/Style_EventCalender.css
+++ b/Asset/CSS/Style_EventCalender.css
@@ -247,7 +247,8 @@ nav {
 }
 .eventCards img {
   width: 100%;
-  min-height: 220px;
+
+  height: 220px;
   object-fit: cover;
   border-radius: 5px;
 }
