--- a/View/EventDetails.html
+++ b/View/EventDetails.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eventify</title>
-    <link rel="stylesheet" href="Style_EventDetails.css" />
+    <link rel="stylesheet" href="../Asset/CSS/Style_EventDetails.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
       rel="stylesheet"
@@ -39,7 +39,7 @@
         <div id="EventBannerAndDetails">
           <div id="EventBanner">
             <img
-              src="Img/uefa-champions-league-stadium-0rqhq348gkv25lxg.jpg"
+              src="../Asset/Image/uefa-champions-league-stadium-0rqhq348gkv25lxg.jpg"
               alt="Event Banner"
             />
           </div>
