--- a/View/index.html
+++ b/View/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eventify</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../Asset/CSS/style_Index.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
       rel="stylesheet"
@@ -23,8 +23,8 @@
         </ul>
       </nav>
       <div id="LogSing">
-        <a class="Blacktxt" href="login.html">Login</a>
-        <a href="signUp.html" id="sgnUp">Sign Up</a>
+        <a class="Blacktxt" href="../View/login.html">Login</a>
+        <a href="../View/signUp.html" id="sgnUp">Sign Up</a>
       </div>
     </header>
     <main>
@@ -155,7 +155,7 @@
           <div id="F1" class="Featured-cards">
             <div class="Featured-img-container">
               <img
-                src="Img/Featured_Img_1.jpg"
+                src="../Asset/Image/Featured_Img_1.jpg"
                 class="Featured-img"
                 alt="Featured Event 1"
               />
@@ -179,7 +179,7 @@
           <div id="F2" class="Featured-cards">
             <div class="Featured-img-container">
               <img
-                src="Img/uefa-champions-league-stadium-0rqhq348gkv25lxg.jpg"
+                src="../Asset/Image/uefa-champions-league-stadium-0rqhq348gkv25lxg.jpg"
                 class="Featured-img"
                 alt="Featured Event 1"
               />
@@ -203,7 +203,7 @@
           <div id="F3" class="Featured-cards">
             <div class="Featured-img-container">
               <img
-                src="Img/Theatre.jpg"
+                src="../Asset/Image/Theatre 1.jpg"
                 class="Featured-img"
                 alt="Featured Event 1"
               />
@@ -231,7 +231,7 @@
           <div id="F4" class="Featured-cards">
             <div class="Featured-img-container">
               <img
-                src="Img/Business-Logo.jpg"
+                src="../Asset/Image/Business-Logo.jpg"
                 class="Featured-img"
                 alt="Featured Event 1"
               />
@@ -334,7 +334,11 @@
               tickets instantly. Highly recommend!"
             </p>
             <div class="User-Name">
-              <img src="Img/User1.jpg" alt="User 1" class="User-Img" />
+              <img
+                src="../Asset/Image/User1.jpg"
+                alt="User 1"
+                class="User-Img"
+              />
               <span class="User-Name-Text">John Doe</span>
             </div>
           </div>
@@ -354,7 +358,11 @@
               Great platform!"
             </p>
             <div class="User-Name">
-              <img src="Img/User-2.jpg" alt="User 2" class="User-Img" />
+              <img
+                src="../Asset/Image/User-2.jpg"
+                alt="User 2"
+                class="User-Img"
+              />
               <span class="User-Name-Text">Jane Smith</span>
             </div>
           </div>
@@ -374,7 +382,11 @@
               definitely use it again."
             </p>
             <div class="User-Name">
-              <img src="Img/User-3.jpg" alt="User 3" class="User-Img" />
+              <img
+                src="../Asset/Image/User-3.jpg"
+                alt="User 3"
+                class="User-Img"
+              />
               <span class="User-Name-Text">Michael Lee</span>
             </div>
           </div>
@@ -425,7 +437,7 @@
             <ul>
               <li><a href="#">About</a></li>
               <li><a href="#">Careers</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="contactUs.html">Contact</a></li>
             </ul>
           </div>
           <div class="footer-column">
@@ -451,6 +463,6 @@
         <p>&copy; 2025 Eventify. All rights reserved.</p>
       </div>
     </footer>
-    <script src="LandingPage.js"></script>
+    <script src="../Asset/js/LandingPage.js"></script>
   </body>
 </html>
