--- a/View/ticketType.html
+++ b/View/ticketType.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Ticket Types</title>
-    <link rel="stylesheet" href="ticketType.css" />
+    <link rel="stylesheet" href="../Asset/CSS/ticketType.css" />
   </head>
   <body>
     <h2 style="text-align: center">Choose Your Ticket Type</h2>
