--- a/Asset/CSS/Style_DashBoard.css
+++ b/Asset/CSS/Style_DashBoard.css
@@ -265,6 +265,136 @@ main {
   font-size: 25px;
   color: #fd2302;
 }
-
 /*Revenue stats Ends*/
+
+/* Recent Users Starts */
+
+/* Header,Container,descripton starts*/
+#RecentUserContainer {
+  margin-top: 30px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.347);
+}
+#ManageUserHeader #ManageUserHeaderTxt {
+  color: #fffdfd;
+}
+#ManageUserHeader {
+  background-color: #4f46e5;
+  padding: 10px;
+  margin-bottom: 20px;
+  text-align: center;
+}
+#ManageUser_P {
+  padding: 10px;
+  margin-bottom: 20px;
+  text-align: center;
+  color: #ffffff;
+}
+/* Header,Container,descripton Ends*/
+
+/* Search and Filter Container Starts */
+#Search_bar_container {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  margin-bottom: 25px;
+  padding: 0 10px;
+}
+
+#Search_bar {
+  flex-grow: 1;
+  padding: 10px;
+  font-size: 16px;
+}
+
+#Search_bar_container button {
+  background-color: #4f46e5;
+  color: #fff;
+  border: none;
+  padding: 10px 15px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+#Search_bar_container button:hover {
+  background-color: #3730a3;
+}
+
+#genderFilter {
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+}
+/* Search Filter Ends */
+
+/* Table Styles */
+#RecentUserHeader {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+#RecentUserTable {
+  border-collapse: collapse;
+  margin-top: 15px;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  width: 100%;
+}
+
+#RecentUserTable th,
+#RecentUserTable td {
+  padding: 12px 15px;
+  text-align: left;
+  border: 1px solid #ddd;
+}
+
+#RecentUserTable th {
+  background-color: #4f46e5;
+  color: white;
+  font-weight: 600;
+}
+
+#RecentUserTable tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
+
+#RecentUserTable tr:hover {
+  background-color: #f1f1f1;
+}
+#RecentUserTable a {
+  text-decoration: underline;
+  color: #6e6d74;
+  font-weight: 500;
+}
+#RecentUserTable a:hover {
+  color: #4f46e5;
+}
+
+/* Table style Ends */
+#See_All_User_Btn_Container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+}
+#See_All_User_Btn {
+  background-color: #4f46e5;
+  color: #fff;
+  border: none;
+  padding: 8px 11px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  border-radius: 6px;
+}
+/* Error MSG */
+form #Search_bar_error {
+  color: red;
+  font-weight: 600;
+  font-size: 14px;
+  margin-top: 5px;
+  text-align: center;
+}
+
+/* Recent Users Ends */
 /* Main Section End */
