--- a/View/Users.html
+++ b/View/Users.html
@@ -9,7 +9,7 @@
       href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="Style_Users.css" />
+    <link rel="stylesheet" href="../Asset/CSS/Style_Users.css" />
   </head>
   <body>
     <!--Header Section-->
@@ -20,7 +20,7 @@
       </div>
 
       <div id="ProfileContainer">
-        <a href="Admin_Profile.html" id="ProfileLink"
+        <a href="ProfileManagement.html" id="ProfileLink"
           >Profile <span><i class="ri-user-3-line"></i></span
         ></a>
       </div>
@@ -29,6 +29,7 @@
 
     <!--Side Bar-->
     <main>
+      <!-- Side Bar Starts -->
       <section id="asideSection">
         <aside>
           <nav class="asideNav">
@@ -154,6 +155,6 @@
         </div>
       </section>
     </main>
-    <script src="AddUsers.js"></script>
+    <script src="../Asset/js/AddUsers.js"></script>
   </body>
 </html>
