--- a/View/signUp.html
+++ b/View/signUp.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="signup.css" />
+    <link rel="stylesheet" href="../Asset/CSS/signup.css" />
   </head>
   <body>
     <div class="container">
@@ -79,7 +79,9 @@
           <a href="#">Privacy Policy</a>.
         </p>
 
-        <p class="login">Already have an account? <a href="#">Log In</a></p>
+        <p class="login">
+          Already have an account? <a href="login.html">Log In</a>
+        </p>
       </form>
     </div>
 
