--- a/View/AdminPanel.html
+++ b/View/AdminPanel.html
@@ -136,6 +136,6 @@
         </fieldset>
       </section>
     </main>
-    <script src="AddEvent.js"></script>
+    <script src="../Asset/js/AddEvent.js"></script>
   </body>
 </html>
