--- a/View/EventCalendar.html
+++ b/View/EventCalendar.html
@@ -327,6 +327,6 @@
         <p>&copy; 2025 Eventify. All rights reserved.</p>
       </div>
     </footer>
-    <script src="EventCalendar.js"></script>
+    <script src="../Asset/js/EventCalendar.js"></script>
   </body>
 </html>
