--- a/View/contactUs.html
+++ b/View/contactUs.html
@@ -39,6 +39,6 @@
       </form>
     </div>
 
-    <script src="CONTACT.JS"></script>
+    <script src="../Asset/js/CONTACT.JS"></script>
   </body>
 </html>
