--- a/View/login.html
+++ b/View/login.html
@@ -72,6 +72,6 @@
       </form>
     </div>
 
-    <script src="login.js"></script>
+    <script src="../Asset/js/login.js"></script>
   </body>
 </html>
