--- a/View/signUp.html
+++ b/View/signUp.html
@@ -85,6 +85,6 @@
       </form>
     </div>
 
-    <script src="signUp.js"></script>
+    <script src="../Asset/js/signUp.js"></script>
   </body>
 </html>
