--- a/View/ticketType.html
+++ b/View/ticketType.html
@@ -53,7 +53,7 @@
             ><input type="checkbox" /> Add Meet & Greet (+$50/person)</label
           >
         </div>
-        <a href="setseclation.html"><button>Select Group</button></a>
+        <a href="../Asset/js/setseclation.html"><button>Select Group</button></a>
       </div>
     </div>
   </body>
