--- a/View/EventDetails.html
+++ b/View/EventDetails.html
@@ -128,6 +128,6 @@
         <p>&copy; 2025 Eventify. All rights reserved.</p>
       </div>
     </footer>
-    <script src="LandingPage.js"></script>
+    <script src="../Asset/js/LandingPage.js"></script>
   </body>
 </html>
