--- a/View/DashBoard.html
+++ b/View/DashBoard.html
@@ -52,7 +52,7 @@
               </li>
               <li id="logout">
                 <span><i class="ri-logout-circle-r-line"></i></span>
-                <a href="index.html">Logout</a>
+                <a href="../index.html">Logout</a>
               </li>
             </ul>
           </nav>
