--- a/View/login.html
+++ b/View/login.html
@@ -46,7 +46,7 @@
 
         <!-- Styled anchor tag for login -->
         <a
-          href="DashBoard.html"
+          href=""
           onclick="return validateLogin()"
           class="login-btn"
           >Login</a
