--- a/View/login.html
+++ b/View/login.html
@@ -45,12 +45,8 @@
         </div>
 
         <!-- Styled anchor tag for login -->
-        <a
-          href="./DashBoard.html"
-          onclick="return validateLogin()"
-          class="login-btn"
-          >Login</a
-        >
+        <a href="./DashBoard.html" onclick="return validateLogin()" class="login-btn">Login</a>
+
 
         <div class="divider">Or, log in with</div>
 
