--- a/View/Users.html
+++ b/View/Users.html
@@ -27,7 +27,6 @@
     </header>
     <!--Header Section End-->
 
-    <!--Side Bar-->
     <main>
       <!-- Side Bar Starts -->
       <section id="asideSection">
@@ -52,7 +51,7 @@
               </li>
               <li id="logout">
                 <span><i class="ri-logout-circle-r-line"></i></span>
-                <a href="index.html">Logout</a>
+                <a href="../index.html">Logout</a>
               </li>
             </ul>
           </nav>
