--- a/View/Add_Event.html
+++ b/View/Add_Event.html
@@ -51,7 +51,7 @@
               </li>
               <li id="logout">
                 <span><i class="ri-logout-circle-r-line"></i></span>
-                <a href="index.html">Logout</a>
+                <a href="../index.html">Logout</a>
               </li>
             </ul>
           </nav>
@@ -74,7 +74,7 @@
             action=""
             method="post"
             enctype="multipart/form-data"
-            onclick="return AddEvent_Validation()"
+            onsubmit="return AddEvent_Validation()"
           >
             <div class="formGroup">
               <div>
