--- a/View/emailVarifation.html
+++ b/View/emailVarifation.html
@@ -1,38 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Email Verification</title>
-  <link rel="stylesheet" href="emailVarifation.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Email Verification</title>
+    <link rel="stylesheet" href="../Asset/CSS/emailVarifation.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
+  </head>
 
-<body>
+  <body>
     <form class="emailVarifation" action="login.html">
+      <div class="verify-container">
+        <div class="close-btn">&times;</div>
 
-  <div class="verify-container">
-    <div class="close-btn">&times;</div>
+        <img
+          src="https://cdn-icons-png.flaticon.com/512/561/561127.png"
+          class="email-img"
+          alt="Email"
+        />
 
-    <img src="https://cdn-icons-png.flaticon.com/512/561/561127.png" class="email-img" alt="Email" />
+        <h2>Verify Your Email Address</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        </p>
 
-    <h2>Verify Your Email Address</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <div class="otp-inputs">
+          <input type="text" maxlength="1" />
+          <input type="text" maxlength="1" />
+          <input type="text" maxlength="1" />
+          <input type="text" maxlength="1" />
+          <input type="text" maxlength="1" />
+          <input type="text" maxlength="1" />
+        </div>
 
-    <div class="otp-inputs">
-      <input type="text" maxlength="1" />
-      <input type="text" maxlength="1" />
-      <input type="text" maxlength="1" />
-      <input type="text" maxlength="1" />
-      <input type="text" maxlength="1" />
-      <input type="text" maxlength="1" />
-    </div>
+        <p class="change-email">
+          Want to Change Your Email Address? <a href="#">Change Here</a>
+        </p>
 
-    <p class="change-email">Want to Change Your Email Address? <a href="#">Change Here</a></p>
-
-    <button class="verify-btn" type="submit" value="submit">Verify Email</button>
-
-  </div>
-</form>
-</body>
+        <button class="verify-btn" type="submit" value="submit">
+          Verify Email
+        </button>
+      </div>
+    </form>
+  </body>
 </html>
