Event Listerner added on Book now Button

--- a/View/EventDetails.html
+++ b/View/EventDetails.html
@@ -18,7 +18,7 @@
       </div>
       <nav>
         <ul>
-          <li><a class="ActivePage" href="#home">Home</a></li>
+          <li><a class="ActivePage" href="../index.html">Home</a></li>
           <li><a href="EventCalendar.html">Events</a></li>
           <li><a href="contactUs.html">Contact Us</a></li>
         </ul>
