--- a/View/DashBoard.html
+++ b/View/DashBoard.html
@@ -36,15 +36,15 @@
             <ul>
               <li id="Selected_Page">
                 <span><i class="ri-dashboard-line"></i></span>
-                <a href="DashBoard.html">Dashboard</a>
+                <a href="./DashBoard.html">Dashboard</a>
               </li>
               <li>
                 <span><i class="ri-calendar-event-line"></i></span
-                ><a href="Add_Event.html">Add Events</a>
+                ><a href="./Add_Event.html">Add Events</a>
               </li>
               <li>
                 <span><i class="ri-user-3-line"></i></span>
-                <a href="Users.html">Users</a>
+                <a href="./Users.html">Users</a>
               </li>
               <li>
                 <span> <i class="ri-settings-2-line"></i> </span>
