--- a/View/Users.html
+++ b/View/Users.html
@@ -85,7 +85,7 @@
 
         <div id="RecentUser">
           <div id="RecentUserHeader">
-            <h1>Recently Registered Users</h1>
+            <h1>All Registered Users</h1>
             <span>
               <label for="genderFilter">Filter by Gender: </label>
               <select id="genderFilter">
@@ -104,6 +104,8 @@
                 <th>Email</th>
                 <th>Phone</th>
                 <th>Gender</th>
+                <th>Update</th>
+                <th>Action</th>
               </tr>
             </thead>
             <tbody>
@@ -113,6 +115,8 @@
                 <td>Zihan@gmail.com</td>
                 <td>+91 1234567890</td>
                 <td>Male</td>
+                <td><a href="./Update_User_info.html">Edit</a></td>
+                <td><a class="Action" href="#edit-007">Action</a></td>
               </tr>
               <tr>
                 <td>007</td>
@@ -120,6 +124,10 @@
                 <td>ayesha123@gmail.com</td>
                 <td>+91 9876543210</td>
                 <td>Female</td>
+                <td>
+                  <a href="./Update_User_info.html">Edit</a>
+                </td>
+                <td><a class="Action" href="#edit-007">Action</a></td>
               </tr>
               <tr>
                 <td>071</td>
@@ -127,6 +135,8 @@
                 <td>rahul.kumar@email.com</td>
                 <td>+91 9988776655</td>
                 <td>Male</td>
+                <td><a href="./Update_User_info.html">Edit</a></td>
+                <td><a class="Action" href="#edit-007">Action</a></td>
               </tr>
               <tr>
                 <td>107</td>
@@ -134,6 +144,8 @@
                 <td>sara.ali@domain.com</td>
                 <td>+91 9123456789</td>
                 <td>Female</td>
+                <td><a href="./Update_User_info.html">Edit</a></td>
+                <td><a class="Action" href="#edit-007">Action</a></td>
               </tr>
               <tr>
                 <td>257</td>
@@ -141,6 +153,8 @@
                 <td>imran007@gmail.com</td>
                 <td>+91 8899776655</td>
                 <td>Male</td>
+                <td><a href="./Update_User_info.html">Edit</a></td>
+                <td><a class="Action" href="#edit-007">Action</a></td>
               </tr>
               <tr>
                 <td>684</td>
@@ -148,6 +162,8 @@
                 <td>nisha.rani@webmail.com</td>
                 <td>+91 7766554433</td>
                 <td>Female</td>
+                <td><a href="./Update_User_info.html">Edit</a></td>
+                <td><a class="Action" href="#edit-007">Action</a></td>
               </tr>
             </tbody>
           </table>
