Manage User Feature Modified, Banned,Suspended,Locked feature added

--- a/View/Users.html
+++ b/View/Users.html
@@ -69,6 +69,24 @@
           </p>
         </div>
 
+        <div id="UserStatsContainer">
+          <div class="user-stats-card">
+            <h3 id="Banned">Banned Users</h3>
+            <p id="bannedCount">12</p>
+            <a href="./SeeAllBanned.html" class="see-all-link">See All</a>
+          </div>
+          <div class="user-stats-card">
+            <h3 id="Suspended">Suspended Users</h3>
+            <p id="suspendedCount">8</p>
+            <a href="./SeeAllSuspended.html" class="see-all-link">See All</a>
+          </div>
+          <div class="user-stats-card">
+            <h3 id="Locked">Locked Users</h3>
+            <p id="lockedCount">5</p>
+            <a href="./SeeAllLocked.html" class="see-all-link">See All</a>
+          </div>
+        </div>
+
         <div>
           <form action="" onsubmit="return isValid()">
             <div id="Search_bar_container">
@@ -116,7 +134,7 @@
                 <td>+91 1234567890</td>
                 <td>Male</td>
                 <td><a href="./Update_User_info.html">Edit</a></td>
-                <td><a class="Action" href="#edit-007">Action</a></td>
+                <td><a class="Action" href="./TakeAction.html">Action</a></td>
               </tr>
               <tr>
                 <td>007</td>
@@ -127,7 +145,7 @@
                 <td>
                   <a href="./Update_User_info.html">Edit</a>
                 </td>
-                <td><a class="Action" href="#edit-007">Action</a></td>
+                <td><a class="Action" href="./TakeAction.html">Action</a></td>
               </tr>
               <tr>
                 <td>071</td>
@@ -136,7 +154,7 @@
                 <td>+91 9988776655</td>
                 <td>Male</td>
                 <td><a href="./Update_User_info.html">Edit</a></td>
-                <td><a class="Action" href="#edit-007">Action</a></td>
+                <td><a class="Action" href="./TakeAction.html">Action</a></td>
               </tr>
               <tr>
                 <td>107</td>
@@ -145,7 +163,7 @@
                 <td>+91 9123456789</td>
                 <td>Female</td>
                 <td><a href="./Update_User_info.html">Edit</a></td>
-                <td><a class="Action" href="#edit-007">Action</a></td>
+                <td><a class="Action" href="./TakeAction.html">Action</a></td>
               </tr>
               <tr>
                 <td>257</td>
@@ -154,7 +172,7 @@
                 <td>+91 8899776655</td>
                 <td>Male</td>
                 <td><a href="./Update_User_info.html">Edit</a></td>
-                <td><a class="Action" href="#edit-007">Action</a></td>
+                <td><a class="Action" href="./TakeAction.html">Action</a></td>
               </tr>
               <tr>
                 <td>684</td>
@@ -163,7 +181,7 @@
                 <td>+91 7766554433</td>
                 <td>Female</td>
                 <td><a href="./Update_User_info.html">Edit</a></td>
-                <td><a class="Action" href="#edit-007">Action</a></td>
+                <td><a class="Action" href="./TakeAction.html">Action</a></td>
               </tr>
             </tbody>
           </table>
