Total User Feature Added

--- a/View/Users.html
+++ b/View/Users.html
@@ -71,6 +71,11 @@
 
         <div id="UserStatsContainer">
           <div class="user-stats-card">
+            <h3 id="TotalUser">Total Users</h3>
+            <p id="lockedCount">5</p>
+            <a href="#RecentUserTable" class="see-all-link">See All</a>
+          </div>
+          <div class="user-stats-card">
             <h3 id="Banned">Banned Users</h3>
             <p id="bannedCount">12</p>
             <a href="./SeeAllBanned.html" class="see-all-link">See All</a>
@@ -79,11 +84,6 @@
             <h3 id="Suspended">Suspended Users</h3>
             <p id="suspendedCount">8</p>
             <a href="./SeeAllSuspended.html" class="see-all-link">See All</a>
-          </div>
-          <div class="user-stats-card">
-            <h3 id="Locked">Locked Users</h3>
-            <p id="lockedCount">5</p>
-            <a href="./SeeAllLocked.html" class="see-all-link">See All</a>
           </div>
         </div>
 
