--- a/View/EventDetails.html
+++ b/View/EventDetails.html
@@ -128,6 +128,7 @@
         <p>&copy; 2025 Eventify. All rights reserved.</p>
       </div>
     </footer>
+    <!-- Footer Section Ends -->
     <script src="../Asset/js/LandingPage.js"></script>
   </body>
 </html>
