--- a/View/EventCalendar.html
+++ b/View/EventCalendar.html
@@ -116,7 +116,7 @@
               <span><i class="ri-map-pin-line"></i></span>Location: National
               Stadium
             </p>
-            <a href="EventDetails.html">Book Now</a>
+            <a href="./WaitingList.html">Book Now</a>
           </div>
         </div>
 
