--- a/View/contactUs 1.html
+++ b/View/contactUs 1.html
@@ -4,41 +4,42 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact Us</title>
-    <link rel="stylesheet" href="../Asset/CSS/Contactus.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
+    <link rel="stylesheet" href="../Asset/CSS/Contactus 1.css" />
   </head>
   <body>
-    <div class="contact-container">
+    <div class="contact-container" id="form-container">
+      <i class="fas fa-arrow-left back-icon"></i>
       <h2>Contact Us</h2>
       <p>
         We’d love to hear from you! Fill out the form below and we’ll get back
         to you as soon as possible.
       </p>
-
-      <form class="contact-form" onsubmit="return validateContactForm()">
+      <div id="error" class="error" style="display: none"></div>
+      <form class="contact-form" id="contact-form">
         <div class="input-group">
-          <input type="text" id="name" placeholder="First Name" />
+          <input type="text" name="name" placeholder="Full Name" />
         </div>
-
         <div class="input-group">
-          <input type="email" id="email" placeholder="Email Address" />
+          <input type="email" name="email" placeholder="Email Address" />
         </div>
-
         <div class="input-group">
-          <input type="text" id="subject" placeholder="Subject" />
+          <input type="text" name="subject" placeholder="Subject" />
         </div>
-
         <div class="input-group">
-          <textarea id="message" rows="5" placeholder="Your Message"></textarea>
+          <textarea
+            name="message"
+            rows="5"
+            placeholder="Your Message"
+          ></textarea>
         </div>
-
         <button type="submit" class="submit-btn">Send Message</button>
       </form>
     </div>
 
-    <script src="../Asset/js/CONTACT.JS"></script>
+    <script src="../Asset/js/contactUs.js"></script>
   </body>
 </html>
